Features:
 * Added scaling support! You can now scale the interface in the "Preferences" panel.
 * Added customizable color schemas. Could be found in the "Preferences".

Fixes:
 * Inability to switch between maps with the same name.

--------------------------------------
 v1.5.0 (2020-05-26)
--------------------------------------

Features:
 * Added a fullscreen mode! Use "Window->Fullscreen" or F11 hotkey to toggle.

Fixes:
 * Incorrect window maximization on start. The window will cover the screen correctly.

--------------------------------------
 v1.4.0 (2020-05-24)
--------------------------------------

Features:
 * New appearance!
 * Added an option to sort variables by their type in the Edit Variables window.
 * Environment panel will show recent maps. Thus you can directly open the map in the corresponding environment.
 * Added a hotkey (F5) to Reset Windows state (initial sizes and position).

Tweaks:
 * Modified map will be highlighted with a color instead of the asterisk.
 * Variables preview window will collapse when the instance has initial variables.

--------------------------------------
 v1.3.1 (2020-05-20)
--------------------------------------

Fixes:
 * Nasty crashes when copy-pasting anything into the "Edit Variables" window.
 * Impropper rendering of the typed russian letters in the "Edit Variables" window.
 * Saving logs to a file.

--------------------------------------
 v1.3.0 (2020-05-12)
--------------------------------------

Features:
 * Item selection will open the item in the environment tree.
 * Added shortcuts to do a zoom-in/zoom-out with keyboard buttons plus and minus.
 * Added canvas panning with arrow keys.

Fixes:
 * Reset marked tile after closing of the search result panel.

--------------------------------------
 v1.2.0 (2020-05-10)
--------------------------------------

Features:
 * Added an option to pin variables in "Edit Variables" window.
 * Added "Screenshot" tool to create high-resolution map images.