@@ -14,6 +14,7 @@ abstract class Provider {
     class InstanceLocatorPanelUiOpen(body: ImBoolean) : Event<ImBoolean, Unit>(body, null)
     class ActionServiceActionBalanceStorage(body: TObjectIntHashMap<Dmm>) : Event<TObjectIntHashMap<Dmm>, Unit>(body, null)
     class CanvasServiceFrameAreas(body: ImBoolean) : Event<ImBoolean, Unit>(body, null)
+    class CanvasServiceSynchronizeMapsView(body: ImBoolean) : Event<ImBoolean, Unit>(body, null)
     class PreferencesServicePreferences(body: Preferences) : Event<Preferences, Unit>(body, null)
     class SettingsServiceSettings(body: Settings) : Event<Settings, Unit>(body, null)
     class ChangelogServiceChangelogText(changelogText: String) : Event<String, Unit>(changelogText, null)
