@@ -6,6 +6,7 @@ import strongdmm.byond.dmm.MapPath
 class State {
     lateinit var providedShowInstanceLocator: ImBoolean
     lateinit var providedFrameAreas: ImBoolean
+    lateinit var providedSynchronizeMapsView: ImBoolean
     lateinit var providedRecentEnvironments: List<String>
     lateinit var providedRecentMaps: List<MapPath>
 
